ajout logs, info combat, etc